<package>

  <name>apriltag_node</name>
  <version>0.0.1</version>
  <description>The apriltag node</description>
  <maintainer email="quchao@seas.upenn.edu">quchao</maintainer>
  <author>Chao Qu</author>
  <license>GPL</license>
  <url>http://ros.org/wiki/apriltag_node</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>camera_info_manager</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>camera_info_manager</run_depend>

</package>
